# fps_game

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  fps_game.sln  fps_game.vcxproj
include/: Camera.h  Collision.h  DebugHUD.h  InputHandler.h  ParticleSystem.h  Renderer.h  Weapon.h  Window.h
src/: Camera.cpp  DebugHUD.cpp  Game.cpp  ParticleSystem.cpp  Player.cpp  Renderer.cpp  Weapon.cpp  Window.cpp
visual_studio_2022/: README_VS2022.md  fps_game.vcxproj  fps_game.vcxproj.filters
visual_studio_2022/include/: Game.h  Map.h  Player.h  Renderer.h  Vector3.h  Window.h
visual_studio_2022/src/: Collision.cpp  DebugHUD.cpp  Game.cpp  InputHandler.cpp  Map.cpp  Window.cpp  main.cpp
